# sjmelck_pages

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  config.toml  config.yaml  pyproject.toml
.github/workflows/: hugo.yaml
assets/images/: fourier_transform_script.py  logistic_regression_script.py  logistic_regression_utils.py  tsa_cot_script.py
assets/images/RBF-Models/: RBF Example.ipynb
assets/images/rbf-models/: RBF Example.ipynb
content/: _index.md
content/about/: douw-marx.md  johann-bouwer.md  justin-smith.md  ryan-balshaw.md  the-origins-of-sjmelck.md
content/blog/: RBF-Models.md  introduction-to-latex-with-assistance-from-zotero.md  logistic-regression.md  optimised-weight-spectrums.md  post-1.md  post-2.md  post-3.md  pretty-plotting-in-python.md  rbf-models.md  the-fourier-transform-explained.md  the-tsa-and-cot-explained.md
content/posts/: about.md  setting-up-my-first-post.md  test-for-douw.md
docs/: 404.html  index.html  index.xml  sitemap.xml
docs/about/: index.html  index.xml
docs/about/douw-marx/: index.html
docs/about/johann-bouwer/: index.html
docs/about/justin-smith/: index.html
docs/about/ryan-balshaw/: index.html
docs/about/the-origins-of-sjmelck/: index.html
docs/blog/: RBF-Models.md.backup  index.html  index.xml
docs/categories/: index.html  index.xml
docs/css/: custom-styles.css
docs/js/: colour_mode_toggler.js
docs/posts/: index.html  index.xml
docs/tags/: index.html  index.xml
docs/tags/rbf/: index.html  (+1 more)
static/blog/: fourier_transform_script.py
themes/sjmelck-theme/: theme.toml
(+53 files in other folders)
