[tool.poetry]
name = "sjmelck-pages"
version = "0.1.0"
description = "A blog created by Douw Marx and Ryan Balshaw."
authors = ["RyanBalshaw <ryanbalshaw81@gmail.com>"]
readme = "README.md"
packages = [{include = "sjmelck_pages"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
matplotlib = "^3.5.3"
pandas = "^1.4.3"
numpy = "^1.23.2"
scipy = "^1.9.0"


[tool.poetry.group.dev.dependencies]
ipympl = "^0.9.1"
jupyterlab = "^3.4.5"
pytest = "^7.1.2"
pre-commit = "^2.20.0"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
# interrogate = "^1.5.0" # Removed for now, it is a little irritating at times.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
